fix(core): доработал класс QuadraticSolver
-Добавил конструктор по умолчанию, который устанавливает значение коэффициентов как 0
-Изменил метод Solve убрал аргумент в виде принимаемого объекта